# ResearchArticleTracker

./: CMakeLists.txt  Makefile  README.md  ResearchArticleTracker.pro  moc_FenetrePrincipale.cpp  moc_predefs.h
ResearchArticleTracker.app/Contents/: Info.plist
ResearchArticleTracker.app/Contents/MacOS/: ResearchArticleTracker
src/: main.cpp
src/model/: Article.cpp  Article.h  Auteur.cpp  Auteur.h  SectionArticle.cpp  SectionArticle.h  SectionsConcretes.cpp  SectionsConcretes.h
src/services/: GestionnaireArticles.cpp  GestionnaireArticles.h  Stockage.cpp  Stockage.h
src/utils/: Exceptions.h  Statuts.cpp  Statuts.h
src/view/: FenetrePrincipale.cpp  FenetrePrincipale.h
